--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,7 +2,7 @@ pre-commit:
   parallel: true
   commands:
     check:
-      run: echo "🧼 Running formatter/linter..." && npm run check:fix -- --staged --no-errors-on-unmatched && git update-index --again
+      run: echo "🧼 Running formatter/linter..." && npm run check:fix -- -- --staged --no-errors-on-unmatched && git update-index --again
 
 # Validate commit messages
 commit-msg:
