--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,10 +2,8 @@
 pre-commit:
   commands:
     check:
-      glob: "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}"
-      run: npx @biomejs/biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --colors=off {staged_files}
-      stage_fixed: true
-      
+      run: npm run check:fix --no-errors-on-unmatched
+
 # Validate commit messages
 commit-msg:
   commands:
