--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "turbo run clean && rimraf package-lock.json .turbo node_modules",
     "dev": "turbo run dev",
     "typecheck": "turbo run typecheck",
-    "check:fix": "biome check . --apply",
+    "check:fix": "biome check . --write",
     "commitlint": "commitlint",
     "prepare": "lefthook install",
     "postinstall": "lefthook install"
@@ -20,8 +20,5 @@
     "turbo": "2.3.3"
   },
   "packageManager": "npm@10.8.2",
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ]
+  "workspaces": ["apps/*", "packages/*"]
 }
