--- a/biome.jsonc
+++ b/biome.jsonc
@@ -23,6 +23,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["node_modules/**", ".next/**", "dist/**", "build/**", "coverage/**"]
+    "ignore": ["node_modules/**", ".next/**", "dist/**", "build/**", "coverage/**"],
+    "include": ["**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx", "**/*.json"]
   }
 }
