--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "turbo run clean && rimraf package-lock.json .turbo node_modules",
     "dev": "turbo run dev",
     "typecheck": "turbo run typecheck",
-    "check:fix": "biome check . --write",
+    "lint": "biome check . --write",
     "commitlint": "commitlint",
     "prepare": "lefthook install",
     "postinstall": "lefthook install"
