--- a/packages/schemas/package.json
+++ b/packages/schemas/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "clean": "rimraf .turbo node_modules dist",
     "typecheck": "tsc --noEmit",
-    "check:fix": "biome check --write"
+    "lint": "biome check --write"
   },
   "exports": {
     ".": {
