--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,7 +28,7 @@
     "react": "19.1.0",
     "react-countup": "6.5.3",
     "react-dom": "19.1.0",
-    "react-hook-form": "7.54.1",
+    "react-hook-form": "^7.57.0",
     "react-window": "^1.8.11",
     "zod": "3.24.1"
   },
