--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
     "@emotion/cache": "11.14.0",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "4.1.3",
     "@mui/icons-material": "7.1.0",
     "@mui/lab": "7.0.0-beta.12",
